--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -17,7 +17,7 @@
             <img src="http://placehold.it/50/30a5ff/fff" class="img-responsive" alt="">
         </div>
         <div class="profile-usertitle">
-            <div class="profile-usertitle-name">Nombre de Usuario</div>
+            <div class="profile-usertitle-name">{{username}}</div>
         </div>
         <div class="clear"></div>
     </div>
