--- a/src/app/pages/dailyrecords/dailyrecords.component.html
+++ b/src/app/pages/dailyrecords/dailyrecords.component.html
@@ -38,7 +38,7 @@
                     <td>{{ dr.date |date:"h:mm a"}}</td>
                     <td>{{ dr.exitHour |date:"h:mm a"}}</td>
                     <td>
-                        <button class="btn btn-info mr-1" [routerLink]="['/dr', dr._id ]">
+                        <button class="btn btn-info mr-1" [routerLink]="['/dailyrecord', dr._id ]">
                             <i class="fa fa-search"></i>
                         </button>
                     </td>
