--- a/src/app/pages/dailyrecord/dailyrecord.component.html
+++ b/src/app/pages/dailyrecord/dailyrecord.component.html
@@ -5,8 +5,8 @@
         <div class="col-lg-12">
             <h1 class="page-header">Registro Diario</h1>
             <h4><strong>Adulto: </strong>{{dr.patient.name}} {{dr.patient.lastName}} {{dr.patient.lastNameSecond}}</h4>
-            <h4><strong>Fecha: </strong>{{dr.date |date:"dd-MM-yyyy" }}</h4>
-            <h4><strong>Hora entrada: </strong>{{dr.date |date:"h:mm a" }}</h4>
+            <h4><strong>Fecha: </strong>{{dr.enterHour |date:"dd-MM-yyyy" }}</h4>
+            <h4><strong>Hora entrada: </strong>{{dr.enterHour |date:"h:mm a" }}</h4>
             <h4 *ngIf="dr.exit"><strong>Hora salida: </strong>{{dr.exitHour |date:"h:mm a" }}</h4>
         </div>
     </div>
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div class="row animated fadeIn faster">
+        <div class="row animated fadeIn faster" *ngIf="dr.vitalSigns.length > 0">
 
             <div class="col-sm-6">
                 <h3 class="card-header">Signos Vitales</h3>
@@ -47,7 +47,7 @@
                 </table>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-6" *ngIf="dr.technicalSupport.length > 0">
                 <h3 class="card-header">Apoyo Técnico</h3>
                 <table class="table table-striped">
                     <thead>
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <div class="row animated fadeIn faster">
+        <div class="row animated fadeIn faster" *ngIf="dr.attitude.length > 0">
 
             <div class="col-sm-6">
                 <h3 class="card-header">Conductas</h3>
@@ -84,7 +84,7 @@
                 </table>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-6" *ngIf="dr.behavior.length > 0">
                 <h3 class="card-header">Comportamientos</h3>
                 <table class="table table-striped">
                     <thead>
@@ -104,7 +104,7 @@
         </div>
 
 
-        <div class="row animated fadeIn faster">
+        <div class="row animated fadeIn faster" *ngIf="dr.crisis.length > 0">
 
             <div class="col-sm-6">
                 <h3 class="card-header">Crisis</h3>
@@ -126,7 +126,7 @@
                 </table>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-6" *ngIf="dr.hygiene.length > 0">
                 <h3 class="card-header">Higiene</h3>
                 <table class="table table-striped">
                     <thead>
@@ -147,11 +147,11 @@
             </div>
         </div>
 
-        <div class="row animated fadeIn faster">
+        <div class="row animated fadeIn faster" *ngIf="dr.meal.length > 0">
 
-            <div class="col-sm-12">
-                <h3 class="card-header">Comida</h3>
-                <table class="table table-striped">
+            <div class=" col-sm-12 ">
+                <h3 class="card-header ">Comida</h3>
+                <table class="table table-striped ">
                     <thead>
                         <tr>
                             <th>Tipo</th>
@@ -164,7 +164,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let m of dr.meal">
+                        <tr *ngFor="let m of dr.meal ">
                             <td>{{m.type}}</td>
                             <td>{{m.performance}}</td>
                             <td>{{m.quantity}}</td>
@@ -180,24 +180,25 @@
 
         </div>
 
-        <div class="row animated fadeIn faster">
-            <div class="col-sm-12">
-                <h3 class="card-header">Bitácora de Fase {{dr.patient.phase}}</h3>
-                <table class="table table-striped">
+        <div class="row animated fadeIn faster " *ngIf="!dr.phaseBinnacle===[] ">
+            <div class="col-sm-12 ">
+                <h3 class="card-header ">Bitácora de Fase {{dr.patient.phase}}</h3>
+                <table class="table table-striped ">
                     <thead>
                         <tr>
-                            <th colspan="2">Orientación lugar:</th>
-                            <td>{{dr.phaseBinnacle.orientation}}</td>
+                            <th colspan="2 ">Orientación lugar:</th>
+                            <td *ngIf="dr.phaseBinnacle.orientation ">Si</td>
+                            <td *ngIf="!dr.phaseBinnacle.orientation ">No</td>
                         </tr>
                         <tr>
-                            <th colspan="2">Orientación tiempo:</th>
+                            <th colspan="2 ">Orientación tiempo:</th>
                             <td>{{dr.phaseBinnacle.date}}</td>
                         </tr>
                         <tr>
-                            <th colspan="3">Observación:</th>
+                            <th colspan="3 ">Observación:</th>
                         </tr>
                         <tr>
-                            <td colspan="3">{{dr.phaseBinnacle.observation}}</td>
+                            <td colspan="3 ">{{dr.phaseBinnacle.observation}}</td>
                         </tr>
                         <tr>
                             <th>Actividad</th>
@@ -206,7 +207,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let p of dr.phaseBinnacle.activities">
+                        <tr *ngFor="let p of dr.phaseBinnacle.activities ">
                             <td>{{p.name}}</td>
                             <td>{{p.classification}}</td>
                             <td>{{p.performance}}</td>
