--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -86,22 +86,16 @@
                             </div>
                         </div>
                     </div>
-
+                    <hr>
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="form-group">
-                                <label for="apoyo">Apoyo técnico:</label>
-                                <div class="checkbox" [(ngModel)]="patient.technicalSupport" name="technicalSupport" id="technicalSupport" ngDefaultControl *ngFor="let s of support">
-                                    <label><input type="checkbox" [value]="s.name">{{s.name}}</label>
-                                </div>
+                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Apoyo Técnico</button>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="form-group">
-                                <label for="alergias">Alergias:</label>
-                                <div class="checkbox" [(ngModel)]="patient.allergies" name="allergies" id="allergies" ngDefaultControl *ngFor="let a of allergies">
-                                    <label><input type="checkbox" [value]="a.name">{{a.name}}</label>
-                                </div>
+                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2">Alergias</button>
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -117,7 +111,7 @@
 
                     <hr>
                     <div class="form-group text-center">
-                        <button type="submit" class="btn btn-primary w-25">
+                        <button type="submit" class="btn btn-primary btn-lg">
                           <i class="fa fa-save"></i>
                         Guardar
                       </button>
@@ -125,5 +119,54 @@
                 </form>
             </div>
         </div>
+
+        <!-- Modal Apoyo Técnico-->
+        <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Apoyo técnico:</h4>
+                    </div>
+
+                    <div class="checkbox p-l-50" [(ngModel)]="patient.technicalSupport" name="technicalSupport" id="technicalSupport" ngDefaultControl *ngFor="let s of support">
+                        <label><input type="checkbox" [value]="s.name">{{s.name}}</label>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Aceptar</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal Alergias-->
+        <div class="modal fade" id="myModal2" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Alergias:</h4>
+                    </div>
+                    <div class="checkbox p-l-50" [(ngModel)]="patient.allergies" name="allergies" id="allergies" ngDefaultControl *ngFor="let a of allergies">
+                        <label><input type="checkbox" [value]="a.name">{{a.name}}</label>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Aceptar</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
     </div>
 </div>
