--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,7 +34,7 @@
                                 <p>{{noti.description}}</p>
                             </div>
                             <div class="col-sm-2">
-                                <div *ngFor="let a of noti.area">{{a}}</div>
+                                <div *ngFor="let a of noti.area"><span class="label label-info">{{a}}</span></div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <p>{{noti.description}}</p>
                             </div>
                             <div class="col-sm-2">
-                                <div *ngFor="let a of noti.area">{{a}}</div>
+                                <div *ngFor="let a of noti.area"><span class="label label-info">{{a}}</span></div>
                             </div>
                         </div>
                     </div>
