--- a/src/app/pages/dailyrecord/dailyrecord.component.html
+++ b/src/app/pages/dailyrecord/dailyrecord.component.html
@@ -2,10 +2,11 @@
 
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
     <div class="row">
+        <h1 class="page-header">Registro Diario</h1>
         <div class="col-lg-12">
-            <h1 class="page-header">Registro Diario</h1>
+
             <h4><strong>Adulto: </strong>{{dr.patient.name}} {{dr.patient.lastName}} {{dr.patient.lastNameSecond}}</h4>
-            <h4><strong>Fecha: </strong>{{dr.enterHour |date:"dd-MM-yyyy" }}</h4>
+            <h4><strong>Fecha: </strong>{{dr.date |date:"dd-MM-yyyy" }}</h4>
             <h4><strong>Hora entrada: </strong>{{dr.enterHour |date:"h:mm a" }}</h4>
             <h4 *ngIf="dr.exit"><strong>Hora salida: </strong>{{dr.exitHour |date:"h:mm a" }}</h4>
         </div>
@@ -18,9 +19,9 @@
         <div class="row text-right">
             <div class="col">
                 <button class="btn btn-danger" routerLink="/dailyrecords">
-          <i class="fa fa-arrow-left"></i>
-          Regresar
-        </button>
+                    <i class="fa fa-arrow-left"></i>
+                    Regresar
+                </button>
             </div>
         </div>
 
@@ -151,7 +152,83 @@
             </div>
         </div>
 
-        <div class="row animated fadeIn faster" *ngIf="dr.meal.length > 0">
+        <div class="row animated fadeIn faster ">
+            <div class="col-sm-6 " *ngIf="dr.phaseBinnacle.status">
+                <h3 class="card-header ">Bitácora de Fase {{dr.patient.phase}}</h3>
+                <table class="table table-striped ">
+                    <thead>
+                        <tr>
+                            <th colspan="2 ">Orientación lugar:</th>
+                            <td *ngIf="dr.phaseBinnacle.orientation ">Si</td>
+                            <td *ngIf="!dr.phaseBinnacle.orientation ">No</td>
+                        </tr>
+                        <tr>
+                            <th colspan="2 ">Orientación tiempo:</th>
+                            <td *ngIf="dr.phaseBinnacle.date ">Si</td>
+                            <td *ngIf="!dr.phaseBinnacle.date ">No</td>
+                        </tr>
+                        <tr>
+                            <th>Observación:</th>
+                            <td colspan="2 ">{{dr.phaseBinnacle.observation}}</td>
+                        </tr>
+                        <tr>
+                            <th>Actividad</th>
+                            <th>Tipo de Actividad</th>
+                            <th>Desempeño</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let p of dr.phaseBinnacle.activities ">
+                            <td>{{p.name}}</td>
+                            <td>{{p.classification}}</td>
+                            <td>{{p.performance}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="col-sm-6 " *ngIf="dr.physioBinnacle.status">
+                <h3 class="card-header ">Bitácora de Fisioterapia</h3>
+                <table class="table table-striped ">
+                    <thead>
+                        <tr>
+                            <th colspan="2 ">Estado de ánimo inicial:</th>
+                            <td *ngIf="dr.physioBinnacle.startMood===1 ">Negativo</td>
+                            <td *ngIf="dr.physioBinnacle.startMood===2 ">Neutral</td>
+                            <td *ngIf="dr.physioBinnacle.startMood===3 ">Positivo</td>
+                        </tr>
+                        <tr>
+                            <th colspan="2 ">Estado de ánimo final:</th>
+                            <td *ngIf="dr.physioBinnacle.endMood===1 ">Negativo</td>
+                            <td *ngIf="dr.physioBinnacle.endMood===2 ">Neutral</td>
+                            <td *ngIf="dr.physioBinnacle.endMood===3 ">Positivo</td>
+                        </tr>
+                        <tr>
+                            <th colspan="2 ">Hora inicial:</th>
+                            <td>{{dr.physioBinnacle.startTime |date:"h:mm a"}}</td>
+                        </tr>
+                        <tr>
+                            <th colspan="2 ">Hora final:</th>
+                            <td>{{dr.physioBinnacle.endTime |date:"h:mm a"}}</td>
+                        </tr>
+                        <tr>
+                            <th>Actividad</th>
+                            <th>Tipo de Actividad</th>
+                            <th>Desempeño</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let p of dr.physioBinnacle.activities ">
+                            <td>{{p.name}}</td>
+                            <td>{{p.classification}}</td>
+                            <td>{{p.performance}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- <div class="row animated fadeIn faster" *ngIf="dr.meal.length > 0">
 
             <div class=" col-sm-12 ">
                 <h3 class="card-header ">Comida</h3>
@@ -180,46 +257,7 @@
                     </tbody>
                 </table>
             </div>
-
-
-        </div>
-
-        <div class="row animated fadeIn faster " *ngIf="!dr.phaseBinnacle===[] ">
-            <div class="col-sm-12 ">
-                <h3 class="card-header ">Bitácora de Fase {{dr.patient.phase}}</h3>
-                <table class="table table-striped ">
-                    <thead>
-                        <tr>
-                            <th colspan="2 ">Orientación lugar:</th>
-                            <td *ngIf="dr.phaseBinnacle.orientation ">Si</td>
-                            <td *ngIf="!dr.phaseBinnacle.orientation ">No</td>
-                        </tr>
-                        <tr>
-                            <th colspan="2 ">Orientación tiempo:</th>
-                            <td>{{dr.phaseBinnacle.date}}</td>
-                        </tr>
-                        <tr>
-                            <th colspan="3 ">Observación:</th>
-                        </tr>
-                        <tr>
-                            <td colspan="3 ">{{dr.phaseBinnacle.observation}}</td>
-                        </tr>
-                        <tr>
-                            <th>Actividad</th>
-                            <th>Tipo de Actividad</th>
-                            <th>Desempeño</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let p of dr.phaseBinnacle.activities ">
-                            <td>{{p.name}}</td>
-                            <td>{{p.classification}}</td>
-                            <td>{{p.performance}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        </div> -->
 
     </div>
 </div>
