--- a/src/app/pages/catalogs/catalogs.component.html
+++ b/src/app/pages/catalogs/catalogs.component.html
@@ -19,6 +19,27 @@
             </div>
         </div>
         <hr>
+
+        <div class="row">
+            <!-- <div class="col-sm-6">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Buscar..." [(ngModel)]="filterSearch" name="filterSearch">
+                </div>
+            </div> -->
+
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <select class="form-control" name="type" id="type" (change)="onChange($event.target.value)"> 
+                      <option *ngFor="let t of tipos" 
+                      [value]="t">{{t}}</option>
+                </select>
+                    <small>Filtrar por tipo de catálogo</small>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+        <pagination-controls (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
         <table *ngIf="!cargando && catalogs.length > 0" class="table mt-3 table-hover animated fadeIn">
             <thead class="thead-dark">
                 <tr>
@@ -29,7 +50,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let cat of catalogs; let i = index">
+                <tr *ngFor="let cat of catalogs | paginate: {itemsPerPage: 10, currentPage: p, totalItems: catalogs.lenght} | filter: filterSearch; let i = index">
                     <th scope="row">{{(i+1)}} </th>
                     <td>{{ cat.name }} </td>
                     <td>{{ cat.type }}</td>
@@ -41,6 +62,8 @@
                 </tr>
             </tbody>
         </table>
+
+
 
         <div *ngIf="!cargando && catalogs.length === 0" class="alert alert-warning text-center mt-3 animated fadeIn">
             <h4 class="alert-heading">No existe información</h4>
