--- a/src/app/pages/dailyrecords/dailyrecords.component.html
+++ b/src/app/pages/dailyrecords/dailyrecords.component.html
@@ -18,7 +18,7 @@
                 </button>
             </div>
         </div> -->
-
+        <pagination-controls (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
         <table *ngIf="!cargando && drs.length > 0" class="table mt-3 table-hover animated fadeIn">
             <thead class="thead-dark">
                 <tr>
@@ -31,7 +31,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let dr of drs; let i = index">
+                <tr *ngFor="let dr of drs| paginate: {itemsPerPage: 10, currentPage: p, totalItems: drs.lenght}; let i = index">
                     <th scope="row">{{ i+1}} </th>
                     <td>{{ dr.date |date:"dd-MM-yyyy" }}</td>
                     <td>{{ dr.patient.name }} {{dr.patient.lastName}} {{dr.patient.lastNameSecond}}</td>
