--- a/src/app/pages/patients/patients.component.html
+++ b/src/app/pages/patients/patients.component.html
@@ -18,6 +18,7 @@
             </div>
         </div>
         <hr>
+        <pagination-controls (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
         <table *ngIf="!cargando && patients.length > 0" class="table mt-3 table-hover animated fadeIn">
             <thead class="thead-dark">
                 <tr>
@@ -29,15 +30,15 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let patient of patients; let i = index">
+                <tr *ngFor="let patient of patients| paginate: {itemsPerPage: 10, currentPage: p, totalItems: patients.lenght}; let i = index">
                     <th scope="row">{{patient.expedient}} </th>
                     <td>{{ patient.name }} {{patient.lastName}} {{patient.lastNameSecond}}</td>
                     <td>{{ patient.birthdate |date:"dd-MM-yyyy" }}</td>
                     <td>{{ patient.phase }}</td>
                     <td>
-                        <button class="btn btn-info mr-1" [routerLink]="['/patient', patient._id ]">
+                        <!-- <button class="btn btn-info mr-1" [routerLink]="['/patient', patient._id ]">
                             <i class="fa fa-pencil"></i>
-                        </button>
+                        </button> -->
                         <button class="btn btn-danger mr-1" (click)="bajaPatient( patient, i )">
                             <i class="fa fa-arrow-down"></i>
                         </button>
