--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -17,18 +17,21 @@
             </div>
         </div>
         <hr>
+        <pagination-controls (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
         <table *ngIf="!cargando && users.length > 0" class="table mt-3 table-hover animated fadeIn">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Nombre</th>
+                    <th scope="col">Nombre de Usuario</th>
                     <th scope="col">Rol</th>
                     <th scope="col">Opciones</th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let user of users; let i = index">
+                <tr *ngFor="let user of users| paginate: {itemsPerPage: 10, currentPage: p, totalItems: users.lenght}; let i = index">
                     <th scope="row">{{(i+1)}} </th>
+                    <td>{{ user.firstName }} {{ user.lastName }}</td>
                     <td>{{ user.name }} </td>
                     <td>{{ user.role }}</td>
                     <td>
